--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         "itemReviewed": {
             "@type": "Casino",
             "name": "Joker123 Casino",
-            "image": "https://example.com/joker123-logo.png",
+            "image": "https://glimpse.surf/joker123-logo.png",
             "url": "https://joker123.com",
             "priceRange": "$$$"
         },
@@ -44,14 +44,14 @@
         "author": {
             "@type": "Organization",
             "name": "Casino Expert Reviews",
-            "url": "https://example.com"
+            "url": "https://glimpse.surf"
         },
         "publisher": {
             "@type": "Organization",
             "name": "Casino Expert Reviews",
             "logo": {
                 "@type": "ImageObject",
-                "url": "https://example.com/logo.png"
+                "url": "https://glimpse.surf/logo.png"
             }
         },
         "datePublished": "2025-01-15",
@@ -94,13 +94,13 @@
                 "@type": "ListItem",
                 "position": 1,
                 "name": "Home",
-                "item": "https://example.com"
+                "item": "https://glimpse.surf"
             },
             {
                 "@type": "ListItem",
                 "position": 2,
                 "name": "Casino Reviews",
-                "item": "https://example.com/reviews"
+                "item": "https://glimpse.surf/reviews"
             },
             {
                 "@type": "ListItem",
