--- a/index.html
+++ b/index.html
@@ -1581,8 +1581,8 @@
                     <h2 class="section-title">Joker123 Casino Overview</h2>
                 </div>
                 <div class="section-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Joker123 is a popular online casino and gaming platform that targets players across Southeast Asia, including Cambodia. It is mainly known for its wide selection of slot games, fish shooting games, and live casino entertainment that can be accessed through mobile devices and desktop browsers.</p>
+                    <p>The platform is available via mobile application (APK for Android) and web version, making it easy for users in Cambodia to register, deposit, and play. Joker123 focuses on casual entertainment but also allows real-money play through third-party agents. Players should always be aware that online gambling for Cambodian citizens exists in a legally restricted environment.</p>
                 </div>
             </section>
 
@@ -1594,8 +1594,8 @@
                     <h2 class="section-title">Games & Software</h2>
                 </div>
                 <div class="section-content">
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi.</p>
+                    <p>Joker123 offers a large collection of slot games, including classic slots, video slots, and themed slot machines. The platform is especially well known for its fish shooting games, which are very popular among Cambodian players for their fast gameplay and interactive design.</p>
+                    <p>In addition to slots, Joker123 provides access to live casino games such as baccarat, roulette, and blackjack through third-party live dealers. The software is optimized for mobile performance, ensuring smooth gameplay on smartphones with relatively low internet bandwidth.</p>
                 </div>
             </section>
 
@@ -1613,11 +1613,11 @@
                             <span>✓</span> Advantages
                         </div>
                         <ul class="pros-list">
-                            <li>Lorem ipsum dolor sit amet consectetur</li>
-                            <li>Excepteur sint occaecat cupidatat non proident</li>
-                            <li>Sed do eiusmod tempor incididunt ut labore</li>
-                            <li>Ut enim ad minim veniam quis nostrud</li>
-                            <li>Duis aute irure dolor in reprehenderit</li>
+                            <li>Wide variety of slot and fish shooting games</li>
+                            <li>Mobile-friendly app for Android devices</li>
+                            <li>Simple registration and user interface</li>
+                            <li>Supports local agents for deposits and withdrawals</li>
+                            <li>Live casino games with real dealers</li>
                         </ul>
                     </div>
                     <div class="cons-box">
@@ -1625,13 +1625,14 @@
                             <span>✗</span> Disadvantages
                         </div>
                         <ul class="cons-list">
-                            <li>Quis nostrud exercitation ullamco laboris</li>
-                            <li>Excepteur sint occaecat cupidatat</li>
-                            <li>Sunt in culpa qui officia deserunt</li>
+                            <li>Legally restricted for Cambodian citizens</li>
+                            <li>No clear international gambling license</li>
+                            <li>Risk of financial loss and gambling addiction</li>
                         </ul>
                     </div>
                 </div>
             </section>
+
 
             <!-- Rating Breakdown -->
             <section class="article-section fade-in">
