--- a/index.html
+++ b/index.html
@@ -1559,17 +1559,6 @@
             </div>
         </div>
 
-        <!-- DYNAMIC CONTENT BLOCK -->
-        <section class="dynamic-content-block fade-in" id="mainContent">
-            <div class="content-placeholder">
-                <svg class="content-placeholder-icon" viewBox="0 0 24 24"><path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/></svg>
-                <p class="content-placeholder-text">
-                    <strong>Dynamic Content Area</strong><br>
-                    Insert your main content here programmatically.<br>
-                    Use <code>document.getElementById('mainContent')</code> to update.
-                </p>
-            </div>
-        </section>
 
         <!-- Article Sections -->
         <article>
@@ -1711,53 +1700,53 @@
                 </div>
 
                 <div class="faq-item">
-                    <button class="faq-question" onclick="toggleFaq(this)">
-                        Is Joker123 Casino safe to play?
-                        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
-                    </button>
-                    <div class="faq-answer">
-                        <div class="faq-answer-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </div>
-                    </div>
-                </div>
+    <button class="faq-question" onclick="toggleFaq(this)">
+        Is Joker123 Casino safe to play?
+        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+    </button>
+    <div class="faq-answer">
+        <div class="faq-answer-content">
+            Joker123 uses basic encryption and security systems to protect user data, but it does not clearly display any internationally recognized gambling license. Players should be cautious, as online gambling is legally restricted for Cambodian citizens and there is limited consumer protection.
+        </div>
+    </div>
+</div>
 
-                <div class="faq-item">
-                    <button class="faq-question" onclick="toggleFaq(this)">
-                        What is the minimum deposit at Joker123?
-                        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
-                    </button>
-                    <div class="faq-answer">
-                        <div class="faq-answer-content">
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem.
-                        </div>
-                    </div>
-                </div>
+<div class="faq-item">
+    <button class="faq-question" onclick="toggleFaq(this)">
+        What is the minimum deposit at Joker123?
+        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+    </button>
+    <div class="faq-answer">
+        <div class="faq-answer-content">
+            The minimum deposit at Joker123 depends on the agent or payment method used. In most cases, the minimum deposit is relatively low, usually starting from a small amount suitable for casual players.
+        </div>
+    </div>
+</div>
 
-                <div class="faq-item">
-                    <button class="faq-question" onclick="toggleFaq(this)">
-                        How long do withdrawals take?
-                        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
-                    </button>
-                    <div class="faq-answer">
-                        <div class="faq-answer-content">
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.
-                        </div>
-                    </div>
-                </div>
+<div class="faq-item">
+    <button class="faq-question" onclick="toggleFaq(this)">
+        How long do withdrawals take?
+        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+    </button>
+    <div class="faq-answer">
+        <div class="faq-answer-content">
+            Withdrawal times vary depending on the agent and payment method. In most cases, withdrawals are processed within a few minutes to several hours, but delays may occur during peak periods or additional verification.
+        </div>
+    </div>
+</div>
 
-                <div class="faq-item">
-                    <button class="faq-question" onclick="toggleFaq(this)">
-                        What games are available at Joker123?
-                        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
-                    </button>
-                    <div class="faq-answer">
-                        <div class="faq-answer-content">
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint.
-                        </div>
-                    </div>
-                </div>
-            </section>
+<div class="faq-item">
+    <button class="faq-question" onclick="toggleFaq(this)">
+        What games are available at Joker123?
+        <svg class="faq-icon" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+    </button>
+    <div class="faq-answer">
+        <div class="faq-answer-content">
+            Joker123 offers a wide selection of slot games, fish shooting games, and live casino games such as baccarat, roulette, and blackjack. The platform is especially popular for its arcade-style fish games and mobile-friendly slots.
+        </div>
+    </div>
+</div>
+
 
             <!-- Author Box -->
             <div class="author-box fade-in" itemscope itemtype="https://schema.org/Person">
