--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 "@type": "ListItem",
                 "position": 2,
                 "name": "Casino Reviews",
-                "item": "https://glimpse.surf/reviews"
+                "item": "https://glimpse.surf/"
             },
             {
                 "@type": "ListItem",
@@ -1455,8 +1455,6 @@
             <!-- Breadcrumbs -->
             <nav class="breadcrumbs" aria-label="Breadcrumb">
                 <a href="/">Home</a>
-                <span>›</span>
-                <a href="/reviews">Casino Reviews</a>
                 <span>›</span>
                 <span style="color: var(--gold-primary);">Joker123</span>
             </nav>
