--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
         <div class="article-meta fade-in">
             <div class="meta-item">
                 <svg viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 10H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm-8 4H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2z"/></svg>
-                Last Updated: Nov 27, 2025
+                Last Updated: Nov 23, 2025
             </div>
             <div class="meta-item">
                 <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
@@ -1565,11 +1565,20 @@
                     <div class="section-icon">
                         <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
                     </div>
-                    <h2 class="section-title">Joker123 Casino Overview</h2>
+                  <h2 class="section-title">Joker123 Casino Overview</h2>
                 </div>
                 <div class="section-content">
-                    <p>Joker123 is a popular online casino and gaming platform that targets players across Southeast Asia, including Cambodia. It is mainly known for its wide selection of slot games, fish shooting games, and live casino entertainment that can be accessed through mobile devices and desktop browsers.</p>
-                    <p>The platform is available via mobile application (APK for Android) and web version, making it easy for users in Cambodia to register, deposit, and play. Joker123 focuses on casual entertainment but also allows real-money play through third-party agents. Players should always be aware that online gambling for Cambodian citizens exists in a legally restricted environment.</p>
+                    <p>Joker123 is a popular online casino and gaming platform that is widely used across Southeast Asia, including Cambodia. The platform mainly focuses on slot games, fish shooting games, and arcade-style casino entertainment designed for fast and simple gameplay. It is especially popular among mobile users due to its lightweight design and smooth performance on smartphones.</p>
+
+                    <p>The platform is accessible through a dedicated Android APK as well as via a web-based interface suitable for desktop and mobile browsers. This allows users to play without the need for powerful devices or complex installations. Registration is quick and usually requires only basic user information, which makes Joker123 attractive to new players.</p>
+
+                    <p>One of the key features of Joker123 is its agent-based operational system. Instead of direct payments through the main website, users work with local agents who manage deposits, withdrawals, bonuses, and customer support. This makes it easier for Cambodian players to use familiar local payment methods but also means that service quality can vary depending on the agent.</p>
+
+                    <p>Joker123 focuses heavily on casual entertainment rather than professional gambling. The games are designed with colorful graphics, easy controls, and fast-paced mechanics to keep players engaged without requiring complex strategies or prior casino experience.</p>
+
+                    <p>However, it is important to understand that online gambling is legally restricted for Cambodian citizens. Joker123 does not clearly display a verified Cambodian gambling license, which means players may not be protected by local gambling regulations. Users should always be aware of the legal and financial risks involved.</p>
+
+                    <p>Overall, Joker123 positions itself as a simple, mobile-oriented casino platform that prioritizes accessibility, fast entertainment, and arcade-style gaming rather than a traditional international casino experience.</p>
                 </div>
             </section>
 
@@ -1581,44 +1590,68 @@
                     <h2 class="section-title">Games & Software</h2>
                 </div>
                 <div class="section-content">
-                    <p>Joker123 offers a large collection of slot games, including classic slots, video slots, and themed slot machines. The platform is especially well known for its fish shooting games, which are very popular among Cambodian players for their fast gameplay and interactive design.</p>
-                    <p>In addition to slots, Joker123 provides access to live casino games such as baccarat, roulette, and blackjack through third-party live dealers. The software is optimized for mobile performance, ensuring smooth gameplay on smartphones with relatively low internet bandwidth.</p>
+                    <p>Joker123 offers a wide range of casino games, with a strong focus on slot machines and fish shooting games. The slot collection includes classic slots, video slots, fruit-themed games, and branded-style arcade slots with bonus rounds and multipliers.</p>
+
+                    <p>The fish shooting games are one of the key attractions of the platform. These games allow players to compete in real time by shooting various types of fish to earn rewards. The simple controls, fast action, and multiplayer elements make these games extremely popular in Cambodia.</p>
+
+                    <p>In addition to arcade games, Joker123 also provides access to live casino games such as baccarat, roulette, blackjack, and other table games through external game providers. Players can interact with real dealers in real time using live video streaming.</p>
+
+                    <p>The software is optimized for mobile devices and runs smoothly on Android smartphones. Games load quickly, controls are responsive, and the interface is designed for touch-screen use. This makes Joker123 suitable even for users with slower internet connections.</p>
+
+                    <p>Overall, the Joker123 software emphasizes simplicity, speed, and stable performance rather than advanced graphics or complex user interfaces.</p>
                 </div>
             </section>
 
-            <!-- Pros & Cons -->
             <section class="article-section fade-in">
                 <div class="section-header">
                     <div class="section-icon">
-                        <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+                        <svg viewBox="0 0 24 24"><path d="M21 7H3V5h18v2zm0 4H3v2h18v-2zm0 6H3v2h18v-2z"/></svg>
                     </div>
-                    <h2 class="section-title">Pros & Cons</h2>
+                    <h2 class="section-title">Payments & Transactions</h2>
                 </div>
-                <div class="pros-cons">
-                    <div class="pros-box">
-                        <div class="pros-title">
-                            <span>✓</span> Advantages
-                        </div>
-                        <ul class="pros-list">
-                            <li>Wide variety of slot and fish shooting games</li>
-                            <li>Mobile-friendly app for Android devices</li>
-                            <li>Simple registration and user interface</li>
-                            <li>Supports local agents for deposits and withdrawals</li>
-                            <li>Live casino games with real dealers</li>
-                        </ul>
-                    </div>
-                    <div class="cons-box">
-                        <div class="cons-title">
-                            <span>✗</span> Disadvantages
-                        </div>
-                        <ul class="cons-list">
-                            <li>Legally restricted for Cambodian citizens</li>
-                            <li>No clear international gambling license</li>
-                            <li>Risk of financial loss and gambling addiction</li>
-                        </ul>
-                    </div>
+                <div class="section-content">
+                    <p>Joker123 uses an agent-based payment system rather than direct bank integration. Players must contact a local agent to make deposits and request withdrawals. This allows for flexible payment options that are suitable for Cambodian users.</p>
+
+                    <p>Common payment methods usually include local bank transfers, mobile wallets, and in some cases cash-based transfers through agents. Minimum deposits are typically low, making the platform accessible for casual players.</p>
+
+                    <p>Withdrawal processing times depend on the agent and payment method. In many cases, withdrawals are completed within a few minutes to several hours, although delays can occur during peak periods.</p>
+
+                    <p>Because transactions are handled manually by agents, users should always verify the reliability of an agent before making large deposits.</p>
                 </div>
             </section>
+
+            <section class="article-section fade-in">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <svg viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5zm0 7.5L6 7l6-3 6 3-6 2.5zm0 4L2 9v6l10 5 10-5V9l-10 4.5z"/></svg>
+                    </div>
+                    <h2 class="section-title">Bonuses & Promotions</h2>
+                </div>
+                <div class="section-content">
+                    <p>Bonuses at Joker123 are usually provided through local agents rather than directly on the main platform. These bonuses may include welcome bonuses, deposit bonuses, cashback offers, and special seasonal promotions.</p>
+
+                    <p>The size and type of bonuses can vary depending on the agent, and wagering requirements may apply. Players should always ask for full bonus terms before accepting any promotions.</p>
+
+                    <p>Because the system is agent-based, bonus availability is not always consistent across all regions. Some agents offer frequent promotions, while others may provide limited bonuses.</p>
+                </div>
+            </section>
+
+            <section class="article-section fade-in">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <svg viewBox="0 0 24 24"><path d="M12 1l9 4v6c0 5.25-3.84 10.74-9 12-5.16-1.26-9-6.75-9-12V5l9-4z"/></svg>
+                    </div>
+                    <h2 class="section-title">Security & Legal Considerations</h2>
+                </div>
+                <div class="section-content">
+                    <p>Joker123 uses basic security measures such as data encryption to protect user information. However, the platform does not clearly display any internationally recognized gambling license.</p>
+
+                    <p>Online gambling is legally restricted for Cambodian citizens, and most licensed gambling operations in Cambodia are limited to land-based casinos for foreigners. This creates a legal gray area for online platforms like Joker123.</p>
+
+                    <p>Because of the lack of clear regulation, players may have limited legal protection in case of disputes, delayed payments, or account issues. Users should always gamble responsibly and only use funds they can afford to lose.</p>
+                </div>
+            </section>
+
 
 
             <!-- Rating Breakdown -->
