--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
                     <li><a href="#">Games</a></li>
                     <li><a href="#">Bonuses</a></li>
                     <li><a href="#">Reviews</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/kh.html">Khmer</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
