--- a/index.html
+++ b/index.html
@@ -1454,9 +1454,9 @@
         <div class="hero-content">
             <!-- Breadcrumbs -->
             <nav class="breadcrumbs" aria-label="Breadcrumb">
-                <a href="/">Home</a>
+                <a href="/kh.html">Khmer</a>
                 <span>›</span>
-                <span style="color: var(--gold-primary);">Joker123</span>
+                <span style="color: var(--gold-primary);">Joker123 </span>
             </nav>
 
             <!-- Casino Card -->
