--- a/kh.html
+++ b/kh.html
@@ -100,7 +100,7 @@
                 "@type": "ListItem",
                 "position": 2,
                 "name": "ការពិនិត្យកាស៊ីណូ",
-                "item": "https://glimpse.surf/reviews"
+                "item": "https://glimpse.surf/"
             },
             {
                 "@type": "ListItem",
@@ -1275,7 +1275,7 @@
             <nav class="breadcrumbs" aria-label="Breadcrumb">
                 <a href="/">ទំព័រដើម</a>
                 <span>›</span>
-                <a href="/reviews">ការពិនិត្យកាស៊ីណូ</a>
+                <a href="/">ការពិនិត្យកាស៊ីណូ</a>
                 <span>›</span>
                 <span style="color: var(--gold-primary);">Joker123</span>
             </nav>
