--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
             <div class="casino-card fade-in">
                 <div class="casino-card-left">
                     <span class="casino-badge">⭐ Editor's Choice 2025</span>
-                    <h1 class="casino-logo-main">JOKER123</h1>
+                    <h1 class="casino-logo-main">JOKER123 / JOKER338 Casino</h1>
                     <p class="casino-subtitle">Premium Online Casino Experience</p>
                     
                     <div class="rating-box">
